<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:gravity="bottom"
    android:orientation="vertical"
    android:background="@drawable/backgrund_theme"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="waheguru.hope.view.auth.LoginActivity">

    <!-- Login progress -->

        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="vertical">

<android.support.v7.widget.AppCompatImageView
    android:layout_width="match_parent"
    app:srcCompat="@drawable/ic_all_inclusive"
    android:layout_height="wrap_content" />

            <TextView
                android:layout_width="wrap_content"
                android:text="@string/app_name"
                android:textSize="26sp"
                android:textColor="@color/colorPrimaryDark"
                android:layout_height="wrap_content" />



            <TextView
                android:layout_width="wrap_content"
                android:text="Bringing Hope and Healing\nwith\nThe Love of God"
                android:padding="20dp"
                android:gravity="center"
                android:textColor="@color/colorPrimaryDark"
                android:layout_height="wrap_content" />



            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <AutoCompleteTextView
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_email"
                    android:inputType="textEmailAddress"
                    android:imeOptions="actionNext"
                    android:maxLines="1"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_password"
                    android:imeActionId="6"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionDone"
                    android:inputType="textPassword|textImeMultiLine"
                    android:maxLines="1"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/email_sign_in_button"
                android:layout_width="match_parent"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:textColor="@android:color/white"
                android:background="@drawable/theme_button"
                android:text="@string/action_sign_in"
                android:textStyle="bold" />

        </LinearLayout>
</LinearLayout>
